增加配置中心

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load static cmstags %}
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -32,6 +33,12 @@
             <span class="iconfont icon-phone"></span>
             <span>手机版</span>
         </a>
+    </div>
+</div>
+<div class="navbar">
+    <div class="container">
+        <div class="logo"></div>
+        <a href="#"></a>
     </div>
 </div>
 </body>
