--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 {% load static cmstags %}
+{% load_settings as settings %}
+{% load_navbar as navbars %}
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -6,16 +8,28 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/favicon.ico" type="image/x-icon" rel="shortcut icon">
 
-    <title>黄鹂网 - 宠物鸟等鸟类的趣闻、图片和视频分享中心</title>
-    <meta name="keywords" content="宠物鸟,鹦鹉,八哥,虎皮鹦鹉,玄凤鹦鹉,牡丹鹦鹉,金刚鹦鹉,价格,怎么养,图片,叫声,寿命,繁殖"/>
-    <meta name="description" content="黄鹂网是广大爱鸟人士的交流中心，我们收集各种鸟类的图片、纪录片和喂养攻略等"/>
+    {% if settings.domain_mobile %}
+        <meta name="mobile-agent" content="format=html5; url={{ settings.domain_mobile }}">
+    {% endif %}
+    {% if settings.logo %}
+        <meta property="og:type" content="image">
+        <meta property="og:image" content="{{ settings.logo }}">
+    {% endif %}
 
-    {#    <link rel="stylesheet" href="/static/iconfont/iconfont.css" />#}
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1271743_9mqw1koml2p.css"/>
+    <link href="/static/image/favicon.ico" type="image/x-icon" rel="shortcut icon">
+
+
+    <title>{{ settings.site_name }} - {{ settings.site_title }}</title>
+    <meta name="keywords" content="{{ settings.keywords }}"/>
+    <meta name="description" content="{{ settings.description }}"/>
+
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1271743_zew73edsfbm.css"/>
     <link rel="stylesheet" href="/static/css/index.css"/>
 
+    {% if settings.header_html %}
+        {{ settings.header_html|safe }}
+    {% endif %}
 
 </head>
 <body>
@@ -37,9 +51,38 @@
 </div>
 <div class="navbar">
     <div class="container">
-        <div class="logo"></div>
-        <a href="#"></a>
+        <div class="logo">
+            {% if settings.logo %}
+                <a href="/" title="{{ settings.title }}">
+                    <img src="{{ settings.logo }}">
+                </a>
+            {% endif %}
+        </div>
+        <div class="link-wrap">
+            <a href="/" class="link">首页</a>
+            {% for item in navbars %}
+                <a href="{{ item.url }}" class="link">{{ item.name }}</a>
+            {% endfor %}
+        </div>
+        <div class="search-bar">
+            <input type="text" name="query" placeholder="请输入要搜索的内容">
+            <span class="iconfont icon-search"></span>
+        </div>
     </div>
+</div>
+
+<div class="footer">
+    <div class="container">
+        <div class="copyright">
+            © {% get_year %} <a href="/" title="{{ settings.site_name }}">{{ settings.site_name }}</a>
+            {% if settings.icp %}
+                ICP备案号：<a href="http://beian.miit.gov.cn" target="_blank">{{ settings.icp }}</a>
+            {% endif %}
+        </div>
+    </div>
+    {% if settings.footer_html %}
+        {{ settings.footer_html|safe }}
+    {% endif %}
 </div>
 </body>
 </html>
