--- a/static/css/index.less
+++ b/static/css/index.less
@@ -1,5 +1,67 @@
 @import "base";
 
 .latest {
-  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+
+  * {
+    font-size: 14px;
+    color: #434A54 !important;
+  }
+
+  float: left;
+}
+
+.news {
+  height: 300px;
+  margin-left: 10px;
+  float: left;
+  width: calc(100% - 550px);
+  padding: 15px;
+  border: 1px solid #ededed;
+  position: relative;
+  overflow: hidden;
+
+  .item {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #ededed;
+
+    &:last-child {
+      border-bottom: none;
+    }
+
+
+    h2 {
+      height: 30px;
+      line-height: 30px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      margin: 0px;
+      padding: 0px;
+
+      font-size: 18px;
+      color: #434A54;
+      font-weight: 500;
+      letter-spacing: 1px;
+    }
+
+    .summary {
+      line-height: 22px;
+      height: 44px;
+      overflow: hidden;
+      font-size: 14px;
+      color: #999;
+      margin-top: 5px;
+    }
+  }
+}
+
+#carousel {
+  width: 500px;
+  float: left;
 }
