--- a/static/css/index.less
+++ b/static/css/index.less
@@ -65,3 +65,25 @@
   width: 500px;
   float: left;
 }
+
+.block {
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+  .head {
+    .title {
+      float: left;
+      display: block;
+      font-size: 20px;
+      color: #434A54;
+      font-weight: 500;
+      letter-spacing: 2px;
+      padding-left: 10px;
+      border-left: #4593FF 5px solid;
+    }
+
+    .more {
+      float: right;
+    }
+  }
+}
