--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 {% load_navbar as navbars %}
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="renderer" content="webkit">
@@ -26,7 +27,7 @@
         <meta name="description" content="{{ settings.description }}"/>
     {% endblock %}
 
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1271743_obk0c7sod3c.css"/>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1271743_neweerm1vk.css"/>
     {% block css %}
         <link rel="stylesheet" href="/static/css/index.css"/>
         <link rel="stylesheet" href="/static/carousel/css/style.css"/>
@@ -38,6 +39,7 @@
     <script type="text/javascript" src="{% static 'carousel/js/startMove.js' %}"></script>
 
 </head>
+
 <body>
 <div class="top">
     <div class="container">
@@ -94,10 +96,9 @@
                 <div id="box">
                     <ul id="pic_list">
                         {% for item in tops %}
-                            <li {% if forloop.counter0 == 0 %}
-                                style="z-index:2;opacity:1;fliter:alpha(opacity=100);" {% endif %}><a
-                                    href="{% url 'article' item.category__alias item.id %}" target="_blank"><img
-                                    src="{{ item.cover }}" alt=""/></a></li>
+                            <li {% if forloop.counter0 == 0 %} style="z-index:2;opacity:1;fliter:alpha(opacity=100);"
+                            {% endif %}><a href="{% url 'article' item.category__alias item.id %}"
+                                           target="_blank"><img src="{{ item.cover }}" alt=""/></a></li>
                         {% endfor %}
                     </ul>
 
@@ -105,9 +106,11 @@
 
                     <ul id="text_list">
                         {% for item in tops %}
-                            <li><h2 {% if forloop.counter0 == 0 %} class="show" {% endif %}><a
-                                    href="{% url 'article' item.category__alias item.id %}"
-                                    target="_blank">{{ item.title }}</a></h2></li>
+                            <li>
+                                <h2 {% if forloop.counter0 == 0 %} class="show" {% endif %}><a
+                                        href="{% url 'article' item.category__alias item.id %}"
+                                        target="_blank">{{ item.title }}</a></h2>
+                            </li>
                         {% endfor %}
                     </ul>
 
@@ -137,8 +140,40 @@
         <div class="block">
             <div class="head clearfix">
                 <div class="title">鸟类百科</div>
-                <div class="more">更多</div>
+                <div class="more">
+                    <a href="{% url 'category' 'aaa' %}" target="_blank">
+                        <span class="iconfont icon-more"></span>
+                        更多
+                    </a>
+                </div>
             </div>
+            {% for item in articles %}
+                <div class="aritle-item">
+                    <div class="cover">
+                        <img src="{{ item.cover }}" loading="lazy">
+                    </div>
+                    <div class="content">
+                        <div class="title">
+                            <h5>
+                                <a href="{% url 'article' item.category__alias item.id %}"
+                                   target="_blank">{{ item.title }}</a>
+                            </h5>
+                        </div>
+                        <div class="summary">{{ item.summary }}</div>
+                        <div class="info">
+
+                            <span class="iconfont icon-book"></span>
+                            <span><a href="{% url 'category' item.category__alias %}" target="_blank">{{ item.category__name }}</a></span>
+
+                            <span class="iconfont icon-date"></span>
+                            <span>{{ item.create_date }}</span>
+
+                            <span class="iconfont icon-yanjing"></span>
+                            <span>{{ item.hits }}</span>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
     </div>
     <div class="side">2</div>
@@ -158,4 +193,5 @@
     {% endif %}
 </div>
 </body>
+
 </html>
