--- a/static/css/index.less
+++ b/static/css/index.less
@@ -1,5 +1,6 @@
 @import "base";
 @import "item";
+@import "atlas";
 
 .latest {
   margin-bottom: 10px;
@@ -67,24 +68,3 @@
   float: left;
 }
 
-.block {
-  margin-top: 10px;
-  margin-bottom: 10px;
-
-  .head {
-    .title {
-      float: left;
-      display: block;
-      font-size: 20px;
-      color: #434A54;
-      font-weight: 500;
-      letter-spacing: 2px;
-      padding-left: 10px;
-      border-left: #4593FF 5px solid;
-    }
-
-    .more {
-      float: right;
-    }
-  }
-}
