--- a/static/css/article.css
+++ b/static/css/article.css
@@ -6,6 +6,10 @@ html {
   color: #444;
   background: #F2F2F2;
 }
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
 a {
   text-decoration: none;
   color: #444444;
@@ -20,6 +24,7 @@ a:hover {
 }
 .container {
   max-width: 1200px;
+  min-width: 1000px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -95,15 +100,20 @@ a:hover {
   background-color: #3E3E3E;
   margin-top: 20px;
 }
-.footer .copyright {
+.footer .copyright,
+.footer .links {
   color: #8F8F8F;
   min-height: 35px;
   line-height: 35px;
   font-size: 14px;
   padding: 20px 0px;
 }
-.footer .copyright a {
+.footer .copyright a,
+.footer .links a {
   color: #8F8F8F;
+}
+.footer .links {
+  padding: 0;
 }
 .clearfix {
   display: block;
@@ -132,6 +142,76 @@ a:hover {
   padding: 15px;
   background: #fff;
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.06);
+}
+.block {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.block .head .title {
+  float: left;
+  display: block;
+  font-size: 20px;
+  color: #434A54;
+  font-weight: 500;
+  letter-spacing: 2px;
+  padding-left: 10px;
+  border-left: #4593FF 5px solid;
+}
+.block .head .more {
+  float: right;
+}
+.side .item .head-title {
+  font-size: 20px;
+  color: #434A54;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+.side .side-article .first,
+.side .side-article .list {
+  margin-bottom: 20px;
+}
+.side .side-article .list {
+  display: table;
+}
+.side .side-article .list .cover {
+  display: table-cell;
+  width: 50px;
+  vertical-align: middle;
+}
+.side .side-article .list .info {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 0px 5px;
+}
+.side .side-article .first {
+  position: relative;
+  width: 250px;
+  height: 200px;
+}
+.side .side-article .first img {
+  width: 100%;
+  height: 100%;
+}
+.side .side-article .first .info {
+  padding: 5px;
+  color: white;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
+.side .side-article .first .info .title {
+  font-size: 14px;
+  color: #fff;
+  height: 25px;
+  line-height: 25px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.side .side-article .first .info a {
+  color: white;
 }
 .article .title {
   font-size: 35px;
