--- a/templates/index.html
+++ b/templates/index.html
@@ -36,33 +36,36 @@
         {{ settings.header_html|safe }}
     {% endif %}
 
+    <script type="text/javascript" src="{% static '/js/core.js' %}"></script>
     <script type="text/javascript" src="{% static 'carousel/js/startMove.js' %}"></script>
 
 </head>
 
 <body>
-<div class="top">
-    <div class="container">
-        <a href="#" class="btn">
-            <span class="iconfont icon-home"></span>
-            <span>设为首页</span>
-        </a>
-        <a href="#" class="btn">
-            <span class="iconfont icon-favorite"></span>
-            <span>点击收藏</span>
-        </a>
-        <a href="#" class="btn">
-            <span class="iconfont icon-phone"></span>
-            <span>手机版</span>
-        </a>
+{% if settings.top_display == '1' %}
+    <div class="top">
+        <div class="container">
+            <a href="#" class="btn">
+                <span class="iconfont icon-home"></span>
+                <span>设为首页</span>
+            </a>
+            <a href="#" class="btn">
+                <span class="iconfont icon-favorite"></span>
+                <span>点击收藏</span>
+            </a>
+            <a href="#" class="btn">
+                <span class="iconfont icon-phone"></span>
+                <span>手机版</span>
+            </a>
+        </div>
     </div>
-</div>
+{% endif %}
 <div class="navbar">
     <div class="container">
         <div class="logo">
             {% if settings.logo %}
                 <a href="/" title="{{ settings.title }}">
-                    <img src="{{ settings.logo }}">
+                    <img src="{{ settings.logo }}" lazyload="on">
                 </a>
             {% endif %}
         </div>
@@ -98,7 +101,9 @@
                         {% for item in tops %}
                             <li {% if forloop.counter0 == 0 %} style="z-index:2;opacity:1;fliter:alpha(opacity=100);"
                             {% endif %}><a href="{% url 'article' item.category__alias item.id %}"
-                                           target="_blank"><img src="{{ item.cover }}" alt=""/></a></li>
+                                           target="_blank"><img lazyload="on" src="{{ item.cover|filter_img }}"
+                                                                onerror="this.src='{% static 'image/no_image.png' %}'"
+                                                                alt=""/></a></li>
                         {% endfor %}
                     </ul>
 
@@ -118,7 +123,8 @@
                         <ul>
                             {% for item in tops %}
                                 <li {% if forloop.counter0 == 0 %} class="active" {% endif %}><a
-                                        href="javascript:void(0)"><img width="64" height="34" src="{{ item.cover }}"
+                                        href="javascript:void(0)"><img lazyload="on" width="64" height="34"
+                                                                       src="{{ item.cover }}"
                                                                        alt=""/></a></li>
                             {% endfor %}
                         </ul>
@@ -136,10 +142,43 @@
                 {% endfor %}
             </div>
         </div>
+
+        {% for item in category_newest %}
+            <div class="block">
+                <div class="head clearfix">
+                    <div class="title"><a href="{% url 'category' item.category.alias %}"
+                                          target="_blank">{{ item.category.name }}</a></div>
+                </div>
+                <div class="atlas">
+                    {% for item in item.articles %}
+                        <div class="item">
+                            <div class="cover">
+                                <img src="{{ item.cover }}" onerror="this.src='{% static 'image/no_image.png' %}'"
+                                     lazyload="on" alt="{{ item.title }}">
+                            </div>
+                            <div class="content">
+                                <div class="title">
+                                    <a href="{% url 'article' item.category__alias item.id %}"
+                                       target="_blank">{{ item.title }}</a>
+                                </div>
+                                <div class="info">
+                                    <span class="iconfont icon-book"></span>
+                                    <span><a href="{% url 'category' item.category__alias %}"
+                                             target="_blank">{{ item.category__name }}</a></span>
+
+                                    <span class="iconfont icon-date"></span>
+                                    <span>{{ item.create_date|date:'y-m-d' }}</span>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endfor %}
         <!-- block 3 -->
         <div class="block">
             <div class="head clearfix">
-                <div class="title">鸟类百科</div>
+                <div class="title">最新发布</div>
                 <div class="more">
                     <a href="{% url 'category' 'aaa' %}" target="_blank">
                         <span class="iconfont icon-more"></span>
@@ -148,9 +187,12 @@
                 </div>
             </div>
             {% for item in articles %}
-                <div class="aritle-item">
+                <div class="article-item clearfix">
                     <div class="cover">
-                        <img src="{{ item.cover }}" loading="lazy">
+                        <a href="{% url 'article' item.category__alias item.id %}" target="_blank">
+                            <img src="{{ item.cover }}" onerror="this.src='{% static 'image/no_image.png' %}'"
+                                 lazyload="on" alt="{{ item.title }}">
+                        </a>
                     </div>
                     <div class="content">
                         <div class="title">
@@ -163,7 +205,8 @@
                         <div class="info">
 
                             <span class="iconfont icon-book"></span>
-                            <span><a href="{% url 'category' item.category__alias %}" target="_blank">{{ item.category__name }}</a></span>
+                            <span><a href="{% url 'category' item.category__alias %}"
+                                     target="_blank">{{ item.category__name }}</a></span>
 
                             <span class="iconfont icon-date"></span>
                             <span>{{ item.create_date }}</span>
@@ -175,17 +218,65 @@
                 </div>
             {% endfor %}
         </div>
+
+        <div class="block">
+            <div class="head clearfix">
+                <div class="title">精彩图集</div>
+            </div>
+            <div class="atlas">
+                {% for item in atlas %}
+                    <div class="item">
+                        <div class="play"></div>
+                        <div class="cover">
+                            <img src="{{ item.cover }}" onerror="this.src='{% static 'image/no_image.png' %}'"
+                                 lazyload="on" alt="{{ item.title }}">
+                        </div>
+                        <div class="content">
+                            <div class="title">
+                                <a href="{% url 'article' item.category__alias item.id %}"
+                                   target="_blank">{{ item.title }}</a>
+                            </div>
+                            <div class="info">
+                                <span class="iconfont icon-book"></span>
+                                <span><a href="{% url 'category' item.category__alias %}"
+                                         target="_blank">{{ item.category__name }}</a></span>
+
+                                <span class="iconfont icon-date"></span>
+                                <span>{{ item.create_date|date:'y-m-d' }}</span>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-    <div class="side">2</div>
+    <div class="side">
+        {% block side %}
+            {% include 'side.html' %}
+        {% endblock %}
+    </div>
 </div>
+
+{% load_links as links %}
 
 <div class="footer">
     <div class="container">
+        {% if links|length != 0 %}
+            <div class="links">
+                <div>友情链接</div>
+                <div>
+                    {% for link in links %}
+                        <a href="{{ link.url }}" target="_blank">{{ link.name }}</a>
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
         <div class="copyright">
             © {% get_year %} <a href="/" title="{{ settings.site_name }}">{{ settings.site_name }}</a>
             {% if settings.icp %}
                 ICP备案号：<a href="http://beian.miit.gov.cn" target="_blank">{{ settings.icp }}</a>
             {% endif %}
+            {{ settings.copyright }}
         </div>
     </div>
     {% if settings.footer_html %}
